[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Components/AspectWaterTankCard.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Components/SectorWaterTanksHoider.gd" type="Script" id=2]
[ext_resource path="res://UI/typography/Heading.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Behaviour/Stagger.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=3]
resource_name = "Enter"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "RESET"
length = 0.1
step = 0.021
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="SectorHolder" type="PanelContainer" groups=[
"animatable",
]]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0.67451, 0.67451, 0.67451, 1 )
margin_top = 751.0
margin_right = 1080.0
margin_bottom = 1020.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectHolder" type="VBoxContainer" parent="."]
margin_right = 1080.0
margin_bottom = 309.0

[node name="SectorHeadingPanel" type="PanelContainer" parent="AspectHolder"]
margin_right = 1080.0
margin_bottom = 85.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="AspectHolder/SectorHeadingPanel"]
margin_right = 1080.0
margin_bottom = 85.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 43
custom_constants/margin_bottom = 10

[node name="SectorHeadingLabel" type="Label" parent="AspectHolder/SectorHeadingPanel/MarginContainer"]
margin_left = 43.0
margin_top = 10.0
margin_right = 1070.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "sector_heading"

[node name="MarginContainer" type="MarginContainer" parent="AspectHolder"]
margin_top = 89.0
margin_right = 1080.0
margin_bottom = 309.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="AspectWaterTankHolder" type="VBoxContainer" parent="AspectHolder/MarginContainer"]
margin_top = 20.0
margin_right = 1080.0
margin_bottom = 200.0

[node name="Stagger" parent="AspectHolder/MarginContainer/AspectWaterTankHolder" instance=ExtResource( 4 )]

[node name="AspectCard" parent="AspectHolder/MarginContainer/AspectWaterTankHolder" instance=ExtResource( 1 )]
margin_right = 1080.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Enter = SubResource( 3 )
anims/RESET = SubResource( 4 )
